--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
         <div class="imoveis-home">
             <div class="imoveis-container">
                 <img src="/images/imoveis/1.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
             </div>
             <div class="class-content">
-                <p>Solar das Margaridas</p>
+                <p>Solar das Margaridas 2</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
             </div>
             <div class="class-info">
                 <p>R$ 171.800,00</p>
@@ -43,9 +49,15 @@
         <div class="imoveis-home">
             <div class="imoveis-container">
                 <img src="/images/imoveis/2.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
             </div>
             <div class="class-content">
                 <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
             </div>
             <div class="class-info">
                 <p>R$ 171.800,00</p>
@@ -55,9 +67,15 @@
         <div class="imoveis-home">
             <div class="imoveis-container">
                 <img src="/images/imoveis/3.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
             </div>
             <div class="class-content">
                 <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
             </div>
             <div class="class-info">
                 <p>R$ 171.800,00</p>
@@ -67,9 +85,15 @@
         <div class="imoveis-home">
             <div class="imoveis-container">
                 <img src="/images/imoveis/4.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
             </div>
             <div class="class-content">
                 <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
             </div>
             <div class="class-info">
                 <p>R$ 171.800,00</p>
@@ -79,9 +103,15 @@
         <div class="imoveis-home">
             <div class="imoveis-container">
                 <img src="/images/imoveis/5.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
             </div>
             <div class="class-content">
                 <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
             </div>
             <div class="class-info">
                 <p>R$ 171.800,00</p>
@@ -91,9 +121,15 @@
         <div class="imoveis-home">
             <div class="imoveis-container">
                 <img src="/images/imoveis/6.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
             </div>
             <div class="class-content">
                 <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
             </div>
             <div class="class-info">
                 <p>R$ 171.800,00</p>
@@ -101,6 +137,12 @@
         </div>
 
     </section>
+
+    <footer>
+        <div class="footer">
+            <p> <a href="/index.html">Anderson Teala - Todos os direitos reservados 2020</a></p>
+        </div>
+    </footer>
 
 </body>
 
