--- a/index.html
+++ b/index.html
@@ -26,6 +26,126 @@
         </div>
     </header>
 
+    <div class="releases">
+        <h3>LANCAMENTOS</h3>
+    </div>
+
+    <section class="imoveis">
+
+        <div class="imoveis-home">
+            <div class="imoveis-container">
+               <img src="/images/imoveis/1.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
+            </div>
+            <div class="class-content">
+                <p>Solar das Margaridas 2</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
+            </div>
+            <div class="class-info">
+                <p>R$ 171.800,00</p>
+            </div>
+        </div>
+
+        <div class="imoveis-home">
+            <div class="imoveis-container">
+                <img src="/images/imoveis/2.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
+            </div>
+            <div class="class-content">
+                <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
+            </div>
+            <div class="class-info">
+                <p>R$ 171.800,00</p>
+            </div>
+        </div>
+
+        <div class="imoveis-home">
+            <div class="imoveis-container">
+                <img src="/images/imoveis/3.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
+            </div>
+            <div class="class-content">
+                <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
+            </div>
+            <div class="class-info">
+                <p>R$ 171.800,00</p>
+            </div>
+        </div>
+
+        <div class="imoveis-home">
+            <div class="imoveis-container">
+                <img src="/images/imoveis/4.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
+            </div>
+            <div class="class-content">
+                <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
+            </div>
+            <div class="class-info">
+                <p>R$ 171.800,00</p>
+            </div>
+        </div>
+
+        <div class="imoveis-home">
+            <div class="imoveis-container">
+                <img src="/images/imoveis/5.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
+            </div>
+            <div class="class-content">
+                <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
+            </div>
+            <div class="class-info">
+                <p>R$ 171.800,00</p>
+            </div>
+        </div>
+
+        <div class="imoveis-home">
+            <div class="imoveis-container">
+                <img src="/images/imoveis/6.png" alt="">
+                <div class="death">
+                    <p>2 Dorms</p>
+                    <p>1 Vaga</p>
+                    <p>37,8 m</p>
+                </div>
+            </div>
+            <div class="class-content">
+                <p>Solar das Margaridas</p>
+                <p class="bairro">Recanto das Rosas - Osasco/SP</p>
+            </div>
+            <div class="class-info">
+                <p>R$ 171.800,00</p>
+            </div>
+        </div>
+
+    </section>
+
+    <div class="releases">
+        <h3>PRONTOS</h3>
+    </div>
+
     <section class="imoveis">
 
         <div class="imoveis-home">
@@ -145,10 +265,5 @@
     </footer>
 
 </body>
-
-
-
-
-
 
 </html>
