Updated menu link information

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </div>
 
         <div class="menu">
-            <a href="/">HOME</a>
-            <a href="/">SOBRE</a>
+            <a href="/index.html">HOME</a>
+            <a href="/about.html">SOBRE</a>
             <a href="/">LANCAMENTOS</a>
             <a href="/">PRONTOS</a>
             <a href="/">BLOG</a>
-            <a href="/">CONTATO</a>
+            <a href="/contact.html">CONTATO</a>
         </div>
     </header>
 
